<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_dark"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_dark"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_dark"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_history_dark"
            android:title="@string/nav_recent" />
    </group>
    
    <item android:title="@string/settings_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_dark"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_dark"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_dark"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>