<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/bg_gradient_dark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/padding_lg"
    android:theme="@style/ThemeOverlay.Material3.Dark">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="@dimen/margin_sm"
        android:background="@drawable/bg_glass_effect"
        android:contentDescription="@string/profile_photo"
        android:padding="2dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Corner.Size.50pct"
        app:strokeColor="@color/md_theme_dark_primary"
        app:strokeWidth="2dp"
        app:srcCompat="@drawable/ic_person_dark" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.DarkUI.Title"
        android:textColor="@color/md_theme_dark_onPrimary" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.DarkUI.Body.Small"
        android:textColor="@color/md_theme_dark_onPrimaryContainer" />

</LinearLayout>